Fix footer links on small devices.

--- a/css/post.css
+++ b/css/post.css
@@ -141,12 +141,14 @@ main hr {
 
 footer {
     box-sizing: border-box;
+    text-align: center;
     margin: 0 auto;
     padding: 0 1em;
     max-width: 800px;
 }
 
 .footer-text {
+    text-align: left;
     margin-top: 50px;
     color: #584032;
     font-family: Lato;
@@ -154,25 +156,18 @@ footer {
 }
 
 .footer-links {
-    text-align: center;
+    display: inline-block;
+    background: #FFF;
+    border-radius: 1em;
 }
 
 .footer-link {
     display: inline-block;
     padding: 1em;
-    background: #FFF;
-}
-
-.footer-link:first-of-type {
-    border-radius: 1em 0 0 1em;
-}
-
-.footer-link:last-of-type {
-    border-radius: 0 1em 1em 0;
 }
 
 .footer-link-img {
-    width: 4em;
+    width: 3em;
 }
 
 .footer-copyright {
